--- a/main/Jenkinsfile
+++ b/main/Jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                build "PES2UG22CS245-1"
-                sh 'g++ main/hello.cpp -o output'
+                build "PES2UG22CS245_1"
+                sh 'g++ main/hello.cpp - output'
             }
         }
         
