--- a/main/Jenkinsfile
+++ b/main/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                build "PES2UG22CS245_1"
+                build "PES2UG22CS245-1"
                 sh 'g++ main/hello.cpp - output'
             }
         }
